--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background:
+    background: #282828
 }
 
 h3 {
@@ -68,6 +68,8 @@ input[type=submit]:hover {
 }
 
 .container {
+    width: 30%;
+    height: 100%;
     background-color: #282828;
     padding: 20px;
 }
