Burger menu på alle sider

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+/*General layout start*/
+
 body {
-    background: #282828
+    background: white;
 }
 
 h3 {
@@ -10,37 +12,82 @@ p {
     color: #f0cf81;
 }
 
-ul {
-    list-style-type: none;
-    overflow: hidden;
-    background-color: #000000;
+/*General layout slut*/
+
+/* header og Nav */
+
+.overlay {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
     width: 100%;
-    padding: 5px;
-
-
-
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: #f0cf81;
     text-align: center;
-    Letter-spacing: 1px;
+    margin-top: 30px;
+}
+
+.overlay a {
+    padding: 8px;
     text-decoration: none;
-    padding: 5px 30px;
+    font-size: 36px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
 }
 
-li a:hover {
-    background-color: rgba(237, 235, 208, 0.17);
-
+.overlay a:hover,
+.overlay a:focus {
+    color: #f1f1f1;
 }
 
+.overlay .closebtn {
+    position: absolute;
+    top: 20px;
+    right: 45px;
+    font-size: 60px;
+}
 
-/*Kontakt formular start*/
+@media screen and (max-height: 450px) {
+    .overlay a {
+        font-size: 20px
+    }
+    .overlay .closebtn {
+        font-size: 40px;
+        top: 15px;
+        right: 35px;
+    }
+}
+
+/*header og nav slut*/
+
+/*forside start*/
+
+/*forside slut*/
+
+/*om start*/
+
+/*om slut*/
+
+/*oelkort start*/
+
+/*oelkort slut*/
+
+/*Event start*/
+
+/*Event slut*/
+
+/*Kontakt start*/
 
 input[type=text],
 select,
@@ -74,4 +121,4 @@ input[type=submit]:hover {
     padding: 20px;
 }
 
-/*kontakt formular slut*/
+/*kontakt slut*/
