--- a/style.css
+++ b/style.css
@@ -186,6 +186,21 @@ a hover {
 
 /*Kontakt start*/
 
+.info {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.tekst {
+    width: 600px;
+}
+
+.kontakt {
+    width: 600px;
+
+}
+
 input[type=text],
 select,
 textarea {
@@ -200,7 +215,7 @@ textarea {
 
 input[type=submit] {
     background-color: #fafafa;
-    color: #363636;
+    color: #101010;
     padding: 8px 20px;
     border: none;
 
@@ -212,10 +227,22 @@ input[type=submit]:hover {
 }
 
 .container {
-    width: 30%;
-    height: 100%;
-    background-color: #282828;
+    background-color: #1c1a1a;
     padding: 20px;
+}
+
+.open {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.time {
+    width: 650px;
+}
+
+.kort img {
+    width: 550px;
 }
 
 /*kontakt slut*/
