--- a/style.css
+++ b/style.css
@@ -116,6 +116,8 @@ a hover {
 
 canvas#showCanvas {
     margin-left: 90px;
+    /*    nu passer den på min skærm, men vi skal nok have ændret det så den passer på mobil
+    - Michelle */
 }
 
 /*forside slut*/
