--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /*General layout start*/
 
 body {
-    /*background: linear-gradient(black, #282828, #282828);*/
     background: #101010
 }
 
@@ -39,10 +38,6 @@ header {
     justify-content: space-between;
     height: 100px;
     margin: 30px;
-
-
-
-
 }
 
 p a {
@@ -114,10 +109,10 @@ a hover {
 
 /*forside start*/
 
-canvas#showCanvas {
-    margin-left: 90px;
-    /*    nu passer den på min skærm, men vi skal nok have ændret det så den passer på mobil
-    - Michelle */
+#showCanvas {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
 }
 
 /*forside slut*/
