--- a/style.css
+++ b/style.css
@@ -114,10 +114,10 @@ a hover {
 
 /*forside start*/
 
-canvas#showCanvas {
-    margin-left: 90px;
-    /*    nu passer den på min skærm, men vi skal nok have ændret det så den passer på mobil
-    - Michelle */
+#showCanvas {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
 }
 
 /*forside slut*/
