--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ a hover {
 
 .overlay-content {
     position: relative;
-    top: 25%;
+    top: 15%;
     width: 100%;
     text-align: center;
     margin-top: 30px;
@@ -102,7 +102,7 @@ a hover {
 .overlay a {
     padding: 8px;
     text-decoration: none;
-    font-size: 36px;
+    font-size: 1.5em;
     color: #f0cf81;
     display: block;
     transition: 0.3s;
